<resources>
    <string name="app_name">FileManager</string>
    <string name="new_build">新建</string>
    <string name="new_file_or_dir">新建文件(夹)</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="file">文件</string>
    <string name="directory">文件夹</string>
    <string name="copy">复制</string>
    <string name="paste">粘贴</string>
    <string name="shear">剪切</string>
    <string name="link">链接</string>
    <string name="rename">重命名</string>
    <string name="delete">删除</string>
    <string name="compress">压缩</string>
    <string name="attribute">属性</string>
    <string name="share">分享</string>
    <string name="openas">打开方式</string>
    <string name="add_to_bookmark">添加书签</string>
    <string name="select_all">全选</string>
    <string name="sort_by">排序方式</string>
    <string name="exit">退出</string>
    <string name="file_name">文件名</string>
</resources>
