<?xml version="1.0" encoding="utf-8"?>
<com.ruffian.library.widget.RLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:background_normal="@color/pureWhite"
    app:corner_radius="5dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/new_build"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_build"
        android:textAlignment="textStart"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/new_build_adapt"
        android:theme="@style/ButtonLight"
        style="?android:attr/buttonBarButtonStyle"/>

    <Button
        android:id="@+id/select_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_all"
        android:textAlignment="textStart"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/select_all_adapt"
        android:theme="@style/ButtonLight"
        style="?android:attr/buttonBarButtonStyle"/>

    <Button
        android:id="@+id/sort_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textAlignment="textStart"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/sort_by_adapt"
        android:theme="@style/ButtonLight"
        style="?android:attr/buttonBarButtonStyle"/>

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textAlignment="textStart"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/exit_adapt"
        android:theme="@style/ButtonLight"
        style="?android:attr/buttonBarButtonStyle"/>

</com.ruffian.library.widget.RLinearLayout>