<?xml version="1.0" encoding="utf-8"?>
<com.ruffian.library.widget.RLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:background_normal="@color/pureWhite"
    app:corner_radius="5dp"
    android:orientation="vertical"
    android:gravity="center_vertical">
    <!--第一行-->
    <com.ruffian.library.widget.RLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <!--复制-->
        <Button
            android:id="@+id/menu_copy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/copy_adapt"
            android:drawablePadding="5dp"
            android:gravity="fill_vertical"
            android:text="@string/copy"
            android:textSize="15sp"
            android:theme="@style/ButtonLight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
        <!--剪切-->
        <Button
            android:id="@+id/menu_shear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/shear_adapt"
            android:drawablePadding="5dp"
            android:gravity="fill_vertical"
            android:text="@string/shear"
            android:textSize="15sp"
            android:theme="@style/ButtonLight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
    </com.ruffian.library.widget.RLinearLayout>

    <!--第二行-->
    <com.ruffian.library.widget.RLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <!--链接-->
        <Button
            android:id="@+id/menu_link"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/link_adapt"
            android:drawablePadding="5dp"
            android:gravity="fill_vertical"
            android:text="@string/link"
            android:textSize="15sp"
            android:theme="@style/ButtonLight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
        <!--重命名-->
        <Button
            android:id="@+id/menu_rename"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/rename_adapt"
            android:drawablePadding="5dp"
            android:gravity="fill_vertical"
            android:text="@string/rename"
            android:textSize="15sp"
            android:theme="@style/ButtonLight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
    </com.ruffian.library.widget.RLinearLayout>

    <!--第三行-->
    <com.ruffian.library.widget.RLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <!--删除-->
        <Button
            android:id="@+id/menu_delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/delete_adapt"
            android:drawablePadding="5dp"
            android:gravity="fill_vertical"
            android:text="@string/delete"
            android:textSize="15sp"
            android:theme="@style/ButtonLight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
        <!--压缩-->
        <Button
            android:id="@+id/menu_compress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/compress_adapt"
            android:drawablePadding="5dp"
            android:gravity="fill_vertical"
            android:text="@string/compress"
            android:textSize="15sp"
            android:theme="@style/ButtonLight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
    </com.ruffian.library.widget.RLinearLayout>

    <!--第四行-->
    <com.ruffian.library.widget.RLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <!--属性-->
        <Button
            android:id="@+id/menu_attribute"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/attribute_adapt"
            android:drawablePadding="5dp"
            android:gravity="fill_vertical"
            android:text="@string/attribute"
            android:textSize="15sp"
            android:theme="@style/ButtonLight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
        <!--分享-->
        <Button
            android:id="@+id/menu_share"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/share_adapt"
            android:drawablePadding="5dp"
            android:gravity="fill_vertical"
            android:text="@string/share"
            android:textSize="15sp"
            android:theme="@style/ButtonLight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
    </com.ruffian.library.widget.RLinearLayout>

    <!--第五行-->
    <com.ruffian.library.widget.RLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <!--打开方式-->
        <Button
            android:id="@+id/menu_openas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/openas_adapt"
            android:drawablePadding="5dp"
            android:gravity="fill_vertical"
            android:text="@string/openas"
            android:textSize="15sp"
            android:theme="@style/ButtonLight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
        <!--添加书签-->
        <Button
            android:id="@+id/menu_bookmark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/bookmark_adapt"
            android:drawablePadding="5dp"
            android:gravity="fill_vertical"
            android:text="@string/add_to_bookmark"
            android:textSize="15sp"
            android:theme="@style/ButtonLight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
    </com.ruffian.library.widget.RLinearLayout>
</com.ruffian.library.widget.RLinearLayout>